--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
   easy_splash_screen: ^1.0.4
   google_fonts: ^3.0.1
   lottie: ^1.4.2
   http: ^0.13.5
   provider: ^6.0.3
-  flutter:
-    sdk: flutter
-
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+  android_alarm_manager_plus: ^2.0.3
+  flutter_local_notifications: ^9.7.0
+  rxdart: ^0.27.5
+  shared_preferences: ^2.0.15
+  sqflite: ^2.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
