fix notification bug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   provider: ^6.0.3
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  android_alarm_manager_plus: ^2.0.3
-  flutter_local_notifications: ^9.7.0
+  android_alarm_manager_plus: ^2.0.7+1
+  flutter_local_notifications: ^11.0.1
   rxdart: ^0.27.5
   shared_preferences: ^2.0.15
   sqflite: ^2.1.0
@@ -55,7 +55,7 @@ flutter_icons:
   android: "launcher_icon"
   image_path: "assets/img/ic_restaurant.png"
   ios: false
-  min_sdk_android: 21
+  min_sdk_android: 26
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
